# fewdigits

./: Combinatorics.hs  FewDigits.cabal  License.txt  test.hs
Data/: Interval.hs  Multinomial.hs
Data/Real/: Base.hs  CReal.hs  Complete.hs  DReal.hs  Dyadic.hs  Gauge.hs  ICReal.hs
